--- a/app/assets/javascripts/backbone/templates/apps/show/layout.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/apps/show/layout.jst.ejs
@@ -3,7 +3,7 @@
 <div id="app-controls-region"></div>
 
 <div class="tab-content">
-  <div class="tab-pane active" id="app-current-build-region"></div>
+  <div class="tab-pane" id="app-current-build-region"></div>
   <div class="tab-pane" id="app-builds-region"></div>
   <div class="tab-pane" id="app-permissions-region"></div>
 </div>
