--- a/app/assets/javascripts/backbone/templates/apps/show/layout.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/apps/show/layout.jst.ejs
@@ -2,9 +2,21 @@
 
 <div id="app-controls-region"></div>
 
+<div>
+  <ul class="nav nav-tabs tab-nav">
+    <% if (hasCurrentBuild()) { %>
+      <li class="active"><a href="#app-current-build-region" data-toggle="tab">Build #<%= currentBuildNumber() %></a></li>
+    <% } %>
+    <li class="<%= hasCurrentBuild() ? '' : 'active' %>"><a href="#app-builds-region" data-toggle="tab">Builds</a></li>
+    <li><a href="#app-permissions-region" data-toggle="tab">Permissions</a></li>
+  </ul>
+</div>
+
 <div class="tab-content">
-  <div class="tab-pane" id="app-current-build-region"></div>
-  <div class="tab-pane" id="app-builds-region"></div>
+  <% if (hasCurrentBuild()) { %>
+    <div class="tab-pane active" id="app-current-build-region"></div>
+  <% } %>
+  <div class="tab-pane <%= hasCurrentBuild() ? '' : 'active' %>" id="app-builds-region"></div>
   <div class="tab-pane" id="app-permissions-region"></div>
 </div>
 
