Added reset after successful form submit

--- a/app/assets/javascripts/backbone/templates/apps/assignments/new/form.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/apps/assignments/new/form.jst.ejs
@@ -1,4 +1,4 @@
-<form id="new_assignment" class="form-inline">
+<form id="new-assignment" class="form-inline">
   <h4>Allow access to this application:</h4>
   <p>
     Enter an email address below to allow access this application. If they
