Render flash messages in layout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
 <body>
 
   <%= render "layouts/partials/navigation" %>
-
+  <%= render "layouts/partials/alerts" %>
   <div class="wrapper">
     <%= yield %>
   </div>
